--- a/docker/containers-configs/config.yml
+++ b/docker/containers-configs/config.yml
@@ -1,6 +1,10 @@
 log_level: "debug" # supported levels: "panic", "fatal", "error", "warning" or "warn", "info", "debug", "trace"
 healthcheck_port: 7001
 
+images_service:
+  base_photo_url: "http://localhost:80/image"
+  pictures_category: "person_photo"
+  
 listen:
   host: 0.0.0.0
   port: 8080
