--- a/docker/containers-configs/config.yml
+++ b/docker/containers-configs/config.yml
@@ -11,27 +11,27 @@ listen:
   server_mode: "BOTH"
   
 db_config: 
-  host: "movies_people_db"
+  host: "movies_persons_db"
   port: "5432"
-  username: "movies_people_service"
-  db_name: "movies_people_db"
+  username: "movies_persons_service"
+  db_name: "movies_persons"
   ssl_mode: "disable"
 
 jaeger:
-  service_name: "Movies_People_Service"
+  service_name: "Movies_Persons_Service"
   address: jaeger:6831
   log_spans: true
 
 prometheus:
-  service_name: "Movies_People_Service"
+  service_name: "Movies_Persons_Service"
   server_config:
     host: 0.0.0.0
     port: 7000
 
 
-movies_people_cache: 
+movies_persons_cache: 
   network: "tcp"
   addr: "redis:6379"
   db: 0
-  movies_people_ttl: 30m
+  movies_persons_ttl: 30m
 
