project structure working, adding linter

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,16 @@
 **/.container_data/
 **/container_logs/
 **/.nginx/configs/cache/
-
+**/.pgadmin-data/
+**/certbot/
+**/certs/
 # ignore all vscode-settings
 **/.vscode
 
 # protected files
 *.env.yml
 *.env
+**/userlist.txt
 
 # ignore all keys
 *.cnf
