--- a/movies_persons_db/movies_persons_db.yml
+++ b/movies_persons_db/movies_persons_db.yml
@@ -1,30 +1,48 @@
 version: "3.8"
 
-
 networks:
   movies_persons_db_network:
     name: "movies_persons_db_network"
 
 services:
-  movies_persons_db:
-    restart: unless-stopped
+  movies_persons_master:
     image: postgres:16.0-alpine3.18
-    hostname: movies_persons_db
+    restart: unless-stopped
     volumes:
       - ./.container_data/database/postgres/data:/var/lib/postgresql/data
-      - ./db/init-up.sql:/docker-entrypoint-initdb.d/init.up.sql
-    ports:
-      - 5440:5432
+      - ./db:/docker-entrypoint-initdb.d
+    expose:
+      - 5432
     networks:
       - movies_persons_db_network
-    environment :
-      - PGDATA=/var/lib/postgresql/data
-      - POSTGRES_USER=${POSTGRES_USER}
-      - PGUSER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=movies_persons
+    environment:
+      PGDATA: /var/lib/postgresql/data
+      POSTGRES_USER: ${POSTGRES_USER}
+      PGUSER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: movies_persons
+      SERVICE_NAME: movies_persons_service
+      SERVICE_PASSWORD: ${SERVICE_PASSWORD}
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  movies_persons_pool:
+    image: bitnami/pgbouncer
+    restart: unless-stopped
+    expose:
+      - 6432
+    networks:
+      - movies_persons_db_network
+    environment:
+      POSTGRESQL_HOST: movies_persons_master
+      POSTGRESQL_USERNAME: ${POSTGRES_USER}
+      POSTGRESQL_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ./docker/pgbouncer/pgbouncer.ini:/bitnami/pgbouncer/conf/pgbouncer.ini
+      - ./docker/pgbouncer/userlist.txt:/etc/pgbouncer/userlist.txt
+    depends_on:
+      movies_persons_master:
+        condition: service_healthy
