--- a/movies_persons_service.yml
+++ b/movies_persons_service.yml
@@ -10,7 +10,8 @@ networks:
 
 services:
   movies_persons_service:
-    build: ./
+    build:
+      dockerfile: alpine.Dockerfile
     command: ./bin/app
     volumes:
       - ./docker/containers-configs/:/configs
